fix hull offset on iOS

--- a/src/styles/components/_categorical-list.scss
+++ b/src/styles/components/_categorical-list.scss
@@ -1,7 +1,7 @@
 .categorical-list {
   --categorical-item-margin: .6rem;
   --categorical-item-multiplier: 1;
-  
+
   display: flex;
   height: 100%;
   justify-content: center;
@@ -20,9 +20,9 @@
   }
 
   &__content {
-    --categorical-available-height: calc(100vh - var(--categorical-bucket-basis) -
+    --categorical-available-height: calc(100% - var(--categorical-bucket-basis) -
       var(--interface-prompt-flex-basis) - var(--categorical-padding-top) -
-      var(--categorical-padding-bottom) - 
+      var(--categorical-padding-bottom) -
       (var(--categorical-item-margin) * 2 * var(--num-categorical-items) / var(--num-categorical-rows)));
     --num-categorical-items: 8;
     --num-categorical-rows: 2;
